--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
+        <img src="images/download.jpeg">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
+        <p> Belly buttons. Everyone has one. This page explores the diversity of bacteria that resides in different belly buttons.</p>
       </div>
     </div>
     <div class="row">
@@ -36,14 +38,17 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <p>This bar graph shows the most popular samples per OID Sample</p>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
+        <p> The gauge graph displays the amount of belly button washes per subject.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
+        <p>The bubble graph looks at the number of bacteria samples in each culture</p>
       </div>
     </div>
   </div>
